--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,7 +20,11 @@
             "type": "python",
             "request": "launch",
             "program": "${workspaceFolder}/selpic.py",
-            "console": "integratedTerminal"
+            "console": "integratedTerminal",
+            "env": {
+                "https_proxy": "http://127.0.0.1:1080",
+                "http_proxy": "http://127.0.0.1:1080",
+            },
         },
         {
             "name": "Python: Current File",
