--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -27,6 +27,17 @@
             },
         },
         {
+            "name": "urikar.py",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/urikar.py",
+            "console": "integratedTerminal",
+            "env": {
+                "https_proxy": "http://127.0.0.1:1080",
+                "http_proxy": "http://127.0.0.1:1080",
+            },
+        },
+        {
             "name": "Python: Current File",
             "type": "python",
             "request": "launch",
